# libspacetime

./: .gitignore  COPYING  ChangeLog  Makefile.am  README.md  autogen.sh  configure.ac  package.m4
doc/: Makefile.am  earth.texi  libspacetime.texi  mars.texi
po/: POTFILES.in  en_US.po  libspacetime.pot
progs/: Makefile.am  marsdate.c
src/: Makefile.am  const.h  earth.c  earth.h  libspacetime.pc.in  mars.c  mars.h
src/mars/: __mars_tm_to_secs.c  ammarstime.c  diffmarstime.c  localmarstime.c  mars.h  mars_time.c  mars_time_impl.h  mkmarstime.c  strfmarstime.c  strpmarstime.c  wcsfmarstime.c
tests/: Makefile.am  package.m4  test.c  testsuite.at
tests/manual/: ammarstime_validity.c
tests/mars/: time.c
tests/mars/ammarstime/: ammarstime_curiosity_landing.c  ammarstime_leapyr_209.c  ammarstime_leapyr_210.c  ammarstime_leapyr_211.c  ammarstime_leapyr_213.c  ammarstime_leapyr_no_200.c  ammarstime_leapyr_no_212.c  ammarstime_mariner9_enter_orbit.c  ammarstime_msd0.c  ammarstime_perseverance_landing.c  end_2yr_cycle.c
tests/mars/diffmarstime/: onesol.c
tests/mars/important_dates/: curiosity_landing.c  mariner9_enter_orbit.c  perseverance_landing.c
tests/mars/mkmarstime/: darian_leap_day_y210.c  gregorian_leap_day_2004.c  msd0.c  nullcheck.c  unixepoch.c  y2038.c  y2038_post.c  y2038_pre.c  y2k.c
tests/mars/strfmarstime/: 12hours.c  24hours.c  century_y0.c  century_y100.c  century_y1000.c  locale_am_pm.c  locale_ampm_fmt.c  locale_d_fmt.c  locale_d_t_fmt.c  locale_t_fmt_12h.c  locale_t_fmt_24h.c  month_padding.c  monthnames.c  monthnames_abbreviated.c  newline.c  percent.c  seconds_padding.c  sol_of_month.c  sol_of_month_spacelz.c  sol_of_year_padding.c  solnames.c  solnames_abbreviated.c  solnames_numbers_u.c  solnames_numbers_w.c  tab.c  weeknumbers_U.c  weeknumbers_W.c  year_with_century.c  year_without_century.c
tests/mars/strpmarstime/: centuries.c  locale_d_t_fmt_dmy.c  locale_d_t_fmt_posix.c  locale_d_t_fmt_ymd.c  parse_ymd.c  strpmarstime_12hrs.c  strpmarstime_24hrs.c  strpmarstime_month_padding.c  strpmarstime_monthnames.c  strpmarstime_monthnames_abbreviated.c  strpmarstime_sol_of_month.c  strpmarstime_sol_of_month_nolz.c  strpmarstime_sol_of_year_padding.c  strpmarstime_solnames.c  strpmarstime_solnames_abbreviated.c
tests/mars/wcsfmarstime/: 12hours_wide.c  24hours_wide.c  centuries_wide.c  locale_am_pm_wide.c  locale_ampm_fmt_wide.c  locale_d_fmt_wide.c  locale_d_t_fmt_wide.c  locale_t_fmt_12h_wide.c  locale_t_fmt_24h_wide.c  month_padding_wide.c  monthnames_abbreviated_wide.c  monthnames_wide.c  newline_wide.c  percent_wide.c  seconds_padding_wide.c  sol_of_month_spacelz_wide.c  sol_of_month_wide.c  sol_of_year_padding_wide.c  solnames_abbreviated_wide.c  solnames_numbers_u_wide.c  solnames_numbers_w_wide.c  solnames_wide.c  tab_wide.c  weeknumbers_U_wide.c  weeknumbers_W_wide.c  year_without_century_wide.c
