# TODO: subfolders for tests
check_PROGRAMS = mars_time \
    mars_diffmarstime_onesol \
    mars_important_dates_curiosity_landing \
    mars_important_dates_mariner9_enter_orbit \
    mars_important_dates_perseverance_landing \
    mars_mkmarstime_darian_leap_day_y210 \
    mars_mkmarstime_gregorian_leap_day_2004 \
    mars_mkmarstime_msd0 \
    mars_mkmarstime_unixepoch \
    mars_mkmarstime_y2k \
    mars_mkmarstime_y2038 \
    mars_mkmarstime_y2038_post \
    mars_mkmarstime_y2038_pre \
    mars_strfmarstime_century_y0 \
    mars_strfmarstime_century_y100 \
    mars_strfmarstime_century_y1000 \
    mars_strfmarstime_solnames_abbreviated \
    mars_strfmarstime_solnames \
    mars_strfmarstime_solnames_numbers_u \
    mars_strfmarstime_solnames_numbers_w \
    mars_strfmarstime_monthnames_abbreviated \
    mars_strfmarstime_monthnames \
    mars_strfmarstime_locale_d_fmt \
    mars_strfmarstime_locale_t_fmt_12h \
    mars_strfmarstime_locale_t_fmt_24h \
    mars_strfmarstime_locale_d_t_fmt \
    mars_strfmarstime_locale_am_pm \
    mars_strfmarstime_locale_ampm_fmt \
    mars_strfmarstime_sol_of_month \
    mars_strfmarstime_sol_of_month_spacelz \
    mars_strfmarstime_24hours \
    mars_strfmarstime_12hours \
    mars_strfmarstime_sol_of_year_padding \
    mars_strfmarstime_month_padding \
    mars_strfmarstime_seconds_padding \
    mars_strfmarstime_newline \
    mars_strfmarstime_weeknumbers_U \
    mars_strfmarstime_weeknumbers_W \
    mars_strfmarstime_year_without_century \
    mars_strfmarstime_year_with_century \
    mars_strfmarstime_tab \
    mars_strfmarstime_percent \
    mars_strpmarstime_strpmarstime_solnames \
    mars_strpmarstime_strpmarstime_solnames_abbreviated \
    mars_strpmarstime_strpmarstime_monthnames \
    mars_strpmarstime_strpmarstime_monthnames_abbreviated \
    mars_strpmarstime_locale_d_t_fmt_dmy \
    mars_strpmarstime_locale_d_t_fmt_posix \
    mars_strpmarstime_locale_d_t_fmt_ymd \
    mars_strpmarstime_centuries \
    mars_strpmarstime_sol_of_month \
    mars_strpmarstime_sol_of_month_nolz \
    mars_strpmarstime_parse_ymd \
    mars_strpmarstime_12hrs \
    mars_strpmarstime_24hrs \
    mars_strpmarstime_sol_of_year_padding \
    mars_strpmarstime_month_padding \
    mars_ammarstime_msd0 \
    mars_ammarstime_end_2yr_cycle \
    mars_ammarstime_curiosity_landing \
    mars_ammarstime_mariner9_enter_orbit \
    mars_ammarstime_perseverance_landing \
    mars_ammarstime_leapyr_213 \
    mars_ammarstime_leapyr_no_212

mars_time_SOURCES = mars/time.c

mars_diffmarstime_onesol_SOURCES = mars/diffmarstime/onesol.c

mars_important_dates_curiosity_landing_SOURCES = mars/important_dates/curiosity_landing.c
mars_important_dates_mariner9_enter_orbit_SOURCES = mars/important_dates/mariner9_enter_orbit.c
mars_important_dates_perseverance_landing_SOURCES = mars/important_dates/perseverance_landing.c

mars_mkmarstime_darian_leap_day_y210_SOURCES = mars/mkmarstime/darian_leap_day_y210.c
mars_mkmarstime_gregorian_leap_day_2004_SOURCES = mars/mkmarstime/gregorian_leap_day_2004.c
mars_mkmarstime_msd0_SOURCES = mars/mkmarstime/msd0.c
mars_mkmarstime_unixepoch_SOURCES = mars/mkmarstime/unixepoch.c

mars_mkmarstime_y2k_SOURCES = mars/mkmarstime/y2k.c

mars_mkmarstime_y2038_SOURCES = mars/mkmarstime/y2038.c
mars_mkmarstime_y2038_post_SOURCES = mars/mkmarstime/y2038_post.c
mars_mkmarstime_y2038_pre_SOURCES = mars/mkmarstime/y2038_pre.c

mars_strfmarstime_century_y0_SOURCES = mars/strfmarstime/century_y0.c
mars_strfmarstime_century_y100_SOURCES = mars/strfmarstime/century_y100.c
mars_strfmarstime_century_y1000_SOURCES = mars/strfmarstime/century_y1000.c

mars_strfmarstime_solnames_abbreviated_SOURCES = mars/strfmarstime/solnames_abbreviated.c
mars_strfmarstime_solnames_SOURCES = mars/strfmarstime/solnames.c

mars_strfmarstime_solnames_numbers_u_SOURCES = mars/strfmarstime/solnames_numbers_u.c
mars_strfmarstime_solnames_numbers_w_SOURCES = mars/strfmarstime/solnames_numbers_w.c

mars_strfmarstime_monthnames_abbreviated_SOURCES = mars/strfmarstime/monthnames_abbreviated.c
mars_strfmarstime_monthnames_SOURCES = mars/strfmarstime/monthnames.c

mars_strfmarstime_locale_d_fmt_SOURCES = mars/strfmarstime/locale_d_fmt.c
mars_strfmarstime_locale_t_fmt_12h_SOURCES = mars/strfmarstime/locale_t_fmt_12h.c
mars_strfmarstime_locale_t_fmt_24h_SOURCES = mars/strfmarstime/locale_t_fmt_24h.c
mars_strfmarstime_locale_d_t_fmt_SOURCES = mars/strfmarstime/locale_d_t_fmt.c
mars_strfmarstime_locale_am_pm_SOURCES = mars/strfmarstime/locale_am_pm.c
mars_strfmarstime_locale_ampm_fmt_SOURCES = mars/strfmarstime/locale_ampm_fmt.c


mars_strfmarstime_sol_of_month_SOURCES = mars/strfmarstime/sol_of_month.c
mars_strfmarstime_sol_of_month_spacelz_SOURCES = mars/strfmarstime/sol_of_month_spacelz.c

mars_strfmarstime_24hours_SOURCES = mars/strfmarstime/24hours.c
mars_strfmarstime_12hours_SOURCES = mars/strfmarstime/12hours.c

# hour padding is included in 24hours test
mars_strfmarstime_sol_of_year_padding_SOURCES = mars/strfmarstime/sol_of_year_padding.c
mars_strfmarstime_month_padding_SOURCES = mars/strfmarstime/month_padding.c
mars_strfmarstime_seconds_padding_SOURCES = mars/strfmarstime/seconds_padding.c

mars_strfmarstime_weeknumbers_U_SOURCES = mars/strfmarstime/weeknumbers_U.c
mars_strfmarstime_weeknumbers_W_SOURCES = mars/strfmarstime/weeknumbers_W.c

mars_strfmarstime_year_without_century_SOURCES = mars/strfmarstime/year_without_century.c
mars_strfmarstime_year_with_century_SOURCES = mars/strfmarstime/year_with_century.c

mars_strfmarstime_newline_SOURCES = mars/strfmarstime/newline.c
mars_strfmarstime_tab_SOURCES = mars/strfmarstime/tab.c
mars_strfmarstime_percent_SOURCES = mars/strfmarstime/percent.c



mars_strpmarstime_strpmarstime_solnames_SOURCES = mars/strpmarstime/strpmarstime_solnames.c
mars_strpmarstime_strpmarstime_solnames_abbreviated_SOURCES = mars/strpmarstime/strpmarstime_solnames_abbreviated.c
mars_strpmarstime_strpmarstime_monthnames_SOURCES = mars/strpmarstime/strpmarstime_monthnames.c
mars_strpmarstime_strpmarstime_monthnames_abbreviated_SOURCES = mars/strpmarstime/strpmarstime_monthnames_abbreviated.c


mars_strpmarstime_locale_d_t_fmt_dmy_SOURCES = mars/strpmarstime/locale_d_t_fmt_dmy.c
mars_strpmarstime_locale_d_t_fmt_posix_SOURCES = mars/strpmarstime/locale_d_t_fmt_posix.c
mars_strpmarstime_locale_d_t_fmt_ymd_SOURCES = mars/strpmarstime/locale_d_t_fmt_ymd.c

mars_strpmarstime_centuries_SOURCES = mars/strpmarstime/centuries.c

mars_strpmarstime_sol_of_month_SOURCES = mars/strpmarstime/strpmarstime_sol_of_month.c
mars_strpmarstime_sol_of_month_nolz_SOURCES = mars/strpmarstime/strpmarstime_sol_of_month_nolz.c

mars_strpmarstime_parse_ymd_SOURCES = mars/strpmarstime/parse_ymd.c

mars_strpmarstime_12hrs_SOURCES = mars/strpmarstime/strpmarstime_12hrs.c
mars_strpmarstime_24hrs_SOURCES = mars/strpmarstime/strpmarstime_24hrs.c

mars_strpmarstime_sol_of_year_padding_SOURCES = mars/strpmarstime/strpmarstime_sol_of_year_padding.c
mars_strpmarstime_month_padding_SOURCES = mars/strpmarstime/strpmarstime_month_padding.c

mars_ammarstime_msd0_SOURCES = mars/ammarstime/ammarstime_msd0.c
mars_ammarstime_end_2yr_cycle_SOURCES = mars/ammarstime/end_2yr_cycle.c
mars_ammarstime_curiosity_landing_SOURCES = mars/ammarstime/ammarstime_curiosity_landing.c
mars_ammarstime_perseverance_landing_SOURCES = mars/ammarstime/ammarstime_perseverance_landing.c
mars_ammarstime_mariner9_enter_orbit_SOURCES = mars/ammarstime/ammarstime_mariner9_enter_orbit.c

mars_ammarstime_leapyr_213_SOURCES = mars/ammarstime/ammarstime_leapyr_213.c
mars_ammarstime_leapyr_no_212_SOURCES = mars/ammarstime/ammarstime_leapyr_no_212.c

LDADD = $(top_srcdir)/src/libspacetime.la

# Below is taken from the autotools docs
$(srcdir)/package.m4: $(top_srcdir)/configure.ac
		:;{ \
		  echo '# Signature of the current package.' && \
		  echo 'm4_define([AT_PACKAGE_NAME],' && \
		  echo '  [$(PACKAGE_NAME)])' && \
		  echo 'm4_define([AT_PACKAGE_TARNAME],' && \
		  echo '  [$(PACKAGE_TARNAME)])' && \
		  echo 'm4_define([AT_PACKAGE_VERSION],' && \
		  echo '  [$(PACKAGE_VERSION)])' && \
		  echo 'm4_define([AT_PACKAGE_STRING],' && \
		  echo '  [$(PACKAGE_STRING)])' && \
		  echo 'm4_define([AT_PACKAGE_BUGREPORT],' && \
		  echo '  [$(PACKAGE_BUGREPORT)])'; \
		  echo 'm4_define([AT_PACKAGE_URL],' && \
		  echo '  [$(PACKAGE_URL)])'; \
		} >'$(srcdir)/package.m4'

EXTRA_DIST = testsuite.at $(srcdir)/package.m4 $(TESTSUITE) atlocal.in
TESTSUITE = $(srcdir)/testsuite

check-local: atconfig atlocal $(TESTSUITE)
	$(SHELL) '$(TESTSUITE)' $(TESTSUITEFLAGS)

installcheck-local: atconfig atlocal $(TESTSUITE)
	$(SHELL) '$(TESTSUITE)' AUTOTEST_PATH='$(bindir)' \
	$(TESTSUITEFLAGS)

clean-local:
	test ! -f '$(TESTSUITE)' || \
		$(SHELL) '$(TESTSUITE)' --clean

AUTOTEST = $(AUTOM4TE) --language=autotest
$(TESTSUITE): $(srcdir)/testsuite.at $(srcdir)/package.m4
	$(AUTOTEST) -I '$(srcdir)' -o $@.tmp $@.at
	mv $@.tmp $@
